--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Retrieve, construct, simulate, convert and analyse building arche
 authors = ["Samuel Letellier-Duchesne <samuelduchesne@me.com>"]
 license = "MIT License"
 readme = "README.md"
+packages = [
+    { include = "archetypal", from = "." },
+    { include = "geomeppy", from = "geomeppy" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
@@ -28,17 +32,14 @@ validator-collection = "^1.5.0"
 pint = "<=0.19"
 typing-extensions = "^4.12.2"
 pydantic-settings = "^2.3.2"
-geomeppy = {git = "https://github.com/samuelduchesne/geomeppy.git", rev = "v0.13"}
 path = "^16.14.0"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 pytest-cov = "^5.0.0"
-
-
-flake8 = "^7.0.0"
 pytest-xdist = "^3.6.1"
+flake8 = "^7.0.0"
+
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
@@ -46,6 +47,34 @@ recommonmark = "^0.7.1"
 sphinx-click = "^6.0.0"
 autodoc-pydantic = "^2.2.0"
 sphinx-autobuild = "^2024.4.16"
+
+[tool.poetry.group.geomeppy.dependencies]
+shapely = "^2.0.4"
+beautifulsoup4 = "<=4.8"
+contourpy = "^1.2.1"
+cycler = "^0.12.1"
+decorator = "^5.1.1"
+eppy = "^0.5.63"
+esoreader = "^1.2.3"
+fonttools = "^4.53.0"
+future = "^1.0.0"
+kiwisolver = "^1.4.5"
+lxml = "^5.2.2"
+matplotlib = "^3.9.0"
+munch = "^4.0.0"
+numpy = "^1.26.4"
+packaging = "^24.1"
+pillow = "^10.3.0"
+pyclipper = "^1.3.0.post5"
+pydot3k = "^1.0.17"
+pyparsing = "^3.1.2"
+pypoly2tri = "^0.0.3"
+python-dateutil = "^2.9.0.post0"
+six = "^1.16.0"
+soupsieve = "^2.5"
+tomli = "^2.0.1"
+transforms3d = "^0.4.1"
+typing-extensions = "^4.12.2"
 
 [build-system]
 requires = ["poetry-core"]
