--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ matplotlib = ">=3.4,<4.0"
 pycountry = "^24.6.1"
 scikit-learn = "^1.5.0"
 pandas = ">=2.0.3"
-numpy = ">=1.17"
+numpy = ">=1.17,<2"
 tqdm = "^4.66.4"
 tabulate = "<0.9"
 click = "^8.1.7"
