--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "geomeppy"]
 	path = geomeppy
-	url = git@github.com:samuelduchesne/geomeppy.git
+	url = https://github.com/samuelduchesne/geomeppy.git
