--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ deprecation = "^2.1.0"
 sigfig = "^1.3.3"
 requests = "^2.32.3"
 coolprop = "^6.6.0"
-energy-pandas = "^0.4.0"
+energy_pandas = "^0.4.1"
 validator-collection = "^1.5.0"
 typing-extensions = "^4.12.2"
 pydantic-settings = "^2.3.2"
