--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,8 @@ setenv =
     ARCHETYPAL_LOGS = {envtmpdir}/logs
     ARCHETYPAL_IMAGES = {envtmpdir}/images
     ARCHETYPAL_CACHE = {envtmpdir}/cache
+    MPLBACKEND = agg
 commands =
     poetry install -v
-    pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
+    pytest {posargs}
+;    pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
