--- a/tox.ini
+++ b/tox.ini
@@ -20,4 +20,4 @@ setenv =
     MPLBACKEND = agg
 commands =
     poetry install -v
-    pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
+    pytest {posargs}
