--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
           energyplus-install: ${{ matrix.energyplus-install }}
 
       - name: Test with tox
-        run: tox -- --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
+        run: tox -- -n 2--doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
 
       - name: Upload coverage reports to Codecov with GitHub Action on Python 3.11
         uses: codecov/codecov-action@v3
