--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,7 +117,7 @@ select = [
     # pyupgrade
     # "UP",
     # ruff
-    # "RUF",
+    "RUF",
     # tryceratops
     # "TRY",
 ]
@@ -143,3 +143,6 @@ source = ["archetypal"]
 
 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]
+
+[tool.ruff.lint]
+allowed-confusables = ["ρ"]
