--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,7 @@ select = [
     # flake8-debugger
     "T10",
     # flake8-simplify
-    # "SIM",
+    "SIM",
     # isort
     "I",
     # mccabe
