--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ numpy = [
     {version = "^2.0.2", python = "<=3.9"},
     {version = "^2.1.1", python = "3.10"}
 ]
+eval-type-backport = {version = "^0.2.0", python = "3.9"}
 
 # geomeppy.dependencies
 shapely = "^2.0.4"
