--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ numpy = [
     {version = "^2.0.2", python = "<=3.9"},
     {version = "^2.1.1", python = "3.10"}
 ]
+eval-type-backport = {version = "^0.2.0", python = "3.9"}
 
 # geomeppy.dependencies
 shapely = "^2.0.4"
@@ -85,7 +86,7 @@ archetypal = "archetypal.cli:cli"
 testpaths = ["tests"]
 
 [tool.ruff]
-target-version = "py310"
+target-version = "py39"
 line-length = 120
 fix = true
 select = [
@@ -115,7 +116,7 @@ select = [
     # pygrep-hooks
     "PGH",
     # pyupgrade
-    # "UP",
+    "UP",
     # ruff
     "RUF",
     # tryceratops
@@ -130,6 +131,8 @@ ignore = [
     "C901",
     # raise-vanilla-args
     "TRY003",
+    # Checks for uses of isinstance and issubclass that take a tuple of types for comparison.
+    "UP038"
 ]
 exclude = ["tests/input_data/*", "docker/trnsidf/*", "geomeppy"]
 
@@ -148,3 +151,7 @@ source = ["archetypal"]
 
 [tool.ruff.lint]
 allowed-confusables = ["ρ"]
+
+[tool.ruff.lint.pyupgrade]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+keep-runtime-typing = true
