--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ numpy = [
     {version = "^2.0.2", python = "<=3.9"},
     {version = "^2.1.1", python = "3.10"}
 ]
+eval-type-backport = {version = "^0.2.0", python = "3.9"}
 
 # geomeppy.dependencies
 shapely = "^2.0.4"
@@ -63,6 +64,7 @@ transforms3d = "^0.4.1"
 pytest = "^8.2.2"
 pytest-cov = "^5.0.0"
 pytest-xdist = "^3.6.1"
+pytest-mock = "^3.14.0"
 tox = "^4.19.0"
 pre-commit = "^3.8.0"
 
@@ -85,7 +87,7 @@ archetypal = "archetypal.cli:cli"
 testpaths = ["tests"]
 
 [tool.ruff]
-target-version = "py310"
+target-version = "py39"
 line-length = 120
 fix = true
 select = [
@@ -94,32 +96,32 @@ select = [
     # flake8-bandit
     # "S",
     # flake8-bugbear
-    # "B",
+    "B",
     # flake8-builtins
-    # "A",
+    "A",
     # flake8-comprehensions
-    # "C4",
+    "C4",
     # flake8-debugger
     "T10",
     # flake8-simplify
-    # "SIM",
+    "SIM",
     # isort
     "I",
     # mccabe
     "C90",
     # pycodestyle
-    #"E",
+    "E",
     "W",
     # pyflakes
-     "F",
+    "F",
     # pygrep-hooks
     "PGH",
     # pyupgrade
-    # "UP",
+    "UP",
     # ruff
-    # "RUF",
+    "RUF",
     # tryceratops
-    # "TRY",
+    "TRY",
 ]
 ignore = [
     # LineTooLong
@@ -127,7 +129,13 @@ ignore = [
     # DoNotAssignLambda
     "E731",
     # Too Complex
-    "C901"
+    "C901",
+    # raise-vanilla-args
+    "TRY003",
+    # Checks for uses of isinstance and issubclass that take a tuple of types for comparison.
+    "UP038",
+    # Python builtin is shadowed by class attribute {name} from {row}
+    "A003"
 ]
 exclude = ["tests/input_data/*", "docker/trnsidf/*", "geomeppy"]
 
@@ -143,3 +151,10 @@ source = ["archetypal"]
 
 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]
+
+[tool.ruff.lint]
+allowed-confusables = ["ρ"]
+
+[tool.ruff.lint.pyupgrade]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+keep-runtime-typing = true
