--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ pytest-xdist = "^3.6.1"
 pytest-mock = "^3.14.0"
 tox = "^4.19.0"
 pre-commit = "^3.8.0"
+pyright = "^1.1.403"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.3.7"
