--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "archetypal"
-version = "2.18.9"
+version = "2.18.10"
 description = "Retrieve, construct, simulate, convert and analyse building archetypes"
 authors = ["Samuel Letellier-Duchesne <samuelduchesne@me.com>"]
 license = "MIT License"
@@ -20,43 +20,25 @@ scikit-learn = "^1.5.0"
 pandas = ">=2.0.3"
 tqdm = "^4.66.4"
 click = "^8.1.7"
-outdated = "^0.2.2"
-deprecation = "^2.1.0"
 sigfig = "^1.3.3"
 requests = "^2.32.3"
 coolprop = "^6.6.0"
 energy_pandas = "^0.4.1"
 validator-collection = "^1.5.0"
-typing-extensions = "^4.12.2"
 pydantic-settings = "^2.3.2"
 path = ">=17.1.0"  # fix an issue with Path.copy returning a str instead of a Path object
 numpy = [
     {version = "^2.0.2", python = "<=3.9"},
     {version = "^2.1.1", python = "3.10"}
 ]
-eval-type-backport = {version = "^0.2.0", python = "3.9"}
 
 # geomeppy.dependencies
 shapely = "^2.0.6"
-beautifulsoup4 = "<=4.8"
-contourpy = "^1.2.1"
-cycler = "^0.12.1"
-decorator = "^5.1.1"
 esoreader = "^1.2.3"
-fonttools = "^4.53.0"
-future = "^1.0.0"
-kiwisolver = "^1.4.5"
-lxml = "^5.2.2"
-munch = "^4.0.0"
 packaging = "^24.1"
-pillow = "^10.3.0"
 pyclipper = "^1.3.0.post5"
-pydot3k = "^1.0.17"
-pyparsing = "^3.1.2"
 pypoly2tri = "^0.0.3"
-python-dateutil = "^2.9.0.post0"
 six = "^1.16.0"
-soupsieve = "^2.5"
 tomli = "^2.0.1"
 transforms3d = "^0.4.1"
 
@@ -86,6 +68,9 @@ archetypal = "archetypal.cli:cli"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+markers = [
+    "slow: marks tests as slow that require EnergyPlus or long processing"
+]
 
 [tool.ruff]
 target-version = "py39"
